--- a/src/Board/Board.css
+++ b/src/Board/Board.css
@@ -3,11 +3,13 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    color: #fff;
 }
 
 .scores {
     display: flex;
     flex-direction: column;
+    align-items: center;
     height: 200px;
 }
 
@@ -16,4 +18,15 @@
     flex-wrap: wrap;
     width: 120px;
     height: 120px;
+}
+
+button {
+    background-color: white;
+    color: #000;
+    border: none;
+    width: 100px;
+    height: 30px;
+    margin-top: 20px;
+    border-radius: 6px;
+    font-weight: 600;
 }
