--- a/src/Box/Box.css
+++ b/src/Box/Box.css
@@ -1,5 +1,5 @@
 .box {
-    border: 1px solid black;
+    border: 1px solid white;
     width: 40px;
     height: 40px;
     display: flex;
@@ -7,4 +7,51 @@
     align-items: center;
     font-size: 32px;
     font-weight: 800;
+}
+
+.mark {
+    color: white;
+}
+
+.winMark-horizontal,
+.winMark-vertical,
+.winMark-diag1,
+.winMark-diag2 {
+    color: rgb(19, 192, 19);
+    position: relative;
+}
+
+.winMark-diag1::after {
+    content: '____';
+    color: rgb(19, 192, 19);
+    position: absolute;
+    transform: rotate(45deg);
+    top: -10px;
+    right: -32px;
+}
+
+.winMark-diag2::after {
+    content: '____';
+    color: rgb(19, 192, 19);
+    position: absolute;
+    transform: rotate(-45deg);
+    top: -10px;
+    right: -10px;
+}
+
+.winMark-horizontal::after {
+    content: '___';
+    color: rgb(19, 192, 19);
+    position: absolute;
+    top: -15px;
+    right: -12px;
+}
+
+.winMark-vertical::after {
+    content: '___';
+    color: rgb(19, 192, 19);
+    position: absolute;
+    transform: rotate(-90deg);
+    top: -2px;
+    right: 1px;
 }
