--- a/src/Board/Board.css
+++ b/src/Board/Board.css
@@ -1,9 +1,10 @@
 .game_container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     flex-direction: column;
     color: #fff;
+    height: 100%;
 }
 
 .scores {
@@ -16,8 +17,17 @@
 .board {
     display: flex;
     flex-wrap: wrap;
-    width: 120px;
-    height: 120px;
+}
+
+.grid_size_container {
+    margin: 15px 0;
+    display: flex;
+    flex-direction: column;
+}
+
+select {
+    background-color: #000;
+    color: #fff;
 }
 
 button {
