--- a/src/Board/Board.css
+++ b/src/Board/Board.css
@@ -12,6 +12,7 @@
     flex-direction: column;
     align-items: center;
     height: 200px;
+    text-align: center;
 }
 
 .board {
@@ -30,13 +31,22 @@ select {
     color: #fff;
 }
 
+.select_opponent {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+input {
+    margin: 0 2px 0 10px;
+}
+
 button {
     background-color: white;
     color: #000;
     border: none;
     width: 170px;
     height: 30px;
-    margin-top: 20px;
     border-radius: 6px;
     font-weight: 600;
 }
